# jj-spr

./: .gitignore  CHANGELOG.md  README.md  flake.nix
.github/workflows/: basic-ci.yml  ci.yml  clippy.yml  release.yml
docs/: README.md
docs/reference/: configuration.md
docs/user/: commit-message.md  installation.md  patch.md  setup.md  simple.md  stack.md
spr/: Cargo.toml
spr/src/: config.rs  git.rs  github.rs  jj.rs  lib.rs  main.rs  message.rs  revision_utils.rs
spr/src/commands/: amend.rs  close.rs  diff.rs  format.rs  init.rs  land.rs  list.rs  patch.rs
spr/tests/: master_base_fix_test.rs  minimal_integration_test.rs  stacked_changes_test.rs  stacked_pr_diff_test.rs
