[package]
name = "jj-spr"
version = "1.3.6-beta.1"
authors = ["Sven Over <sven@cord.com>", "Jozef Mokry <jozef@cord.com>"]
description = "Jujutsu subcommand for submitting pull requests for individual, amendable, rebaseable commits to GitHub"
repository = "https://github.com/getcord/spr"
homepage = "https://github.com/getcord/spr"
license = "MIT"
edition = "2024"
exclude = [".github", ".gitignore"]

[[bin]]
name = "jj-spr"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.5.48", features = ["derive", "wrap_help"] }
console = "^0.16.1"
debug-ignore = "1.0.5"
dialoguer = "^0.12.0"
futures = "^0.3.21"
futures-lite = "^2.6.1"
git2 = { version = "^0.17.2", default-features = false }
git2-ext = "0.6.0"
graphql_client = "^0.14.0"
indoc = "^2.0.6"
lazy-regex = "^3.4.1"
octocrab = { version = "^0.16.0", default-features = false, features = ["rustls"] }
reqwest = { version = "^0.11.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "^1.0.136"
textwrap = "0.16.2"
thiserror = "^1.0.30"
tokio = { version = "^1.19.2", features = ["macros", "process", "rt-multi-thread", "time"] }
unicode-normalization = "^0.1.19"

[dev-dependencies]
tempfile = "3.0"
